<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:contentDescription="@string/haskell_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/haskell_logos" />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/android_logo_button"
        android:src="@drawable/ic_launcher_foreground" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dim_150"
        android:layout_weight="1"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mushroom_soup"
            android:textSize="@dimen/sp_11" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funny_kebab"
            android:textSize="@dimen/sp_11" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cutlets_with_mashed_potatoes"
            android:textSize="@dimen/sp_11" />

    </RadioGroup>


</LinearLayout>