<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:contentDescription="@string/haskell_logo"
        android:src="@drawable/haskell_logos"
        android:scaleType="centerCrop"
        />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/android_logo_button"
        android:src="@drawable/ic_launcher_foreground" />

    <Space
        android:layout_width="@dimen/dim_150"
        android:layout_height="match_parent" />

    <RadioGroup

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <RadioButton
            android:textSize="@dimen/sp_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mushroom_soup" />

        <RadioButton
            android:textSize="@dimen/sp_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funny_kebab" />

        <RadioButton
            android:textSize="@dimen/sp_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cutlets_with_mashed_potatoes" />

    </RadioGroup>


</LinearLayout>