<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/haskellLogo"
        android:layout_width="0dp"
        android:layout_height="match_parent"


        android:contentDescription="@string/haskell_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/haskell_logos"

        app:layout_constraintEnd_toStartOf="@id/androidButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/androidButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"


        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/android_logo_button"
        android:src="@drawable/ic_launcher_foreground"

        app:layout_constraintEnd_toStartOf="@id/radioGroup"
        app:layout_constraintStart_toEndOf="@id/haskellLogo"

        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dim_150"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/androidButton">


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mushroom_soup"
            android:textSize="@dimen/sp_11" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funny_kebab"
            android:textSize="@dimen/sp_11" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cutlets_with_mashed_potatoes"
            android:textSize="@dimen/sp_11" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>