<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--I think name of dim in okay_case -->
    <!--Added img for playing with 9.png -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50"

        android:contentDescription="@string/haskell_logo"
        android:src="@drawable/haskell" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:gravity="start"
        android:hint="@string/haskell_question"
        android:autofillHints="search info"
        android:inputType="text" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_50"

        android:gravity="start"
        android:text="@string/haskell_button"
    />
</LinearLayout>